[package]
name = "solvent"
version = "0.1.0"
authors = [ "mike@mikedilger.com" ]
description = "Dependency Resolver library"
repository = "https://github.com/mikedilger/solvent"
readme = "README.md"
keywords = [ "dependency", "graph", "solver", "resolver" ]
license = "MIT"

[lib]
name = "solvent"
path = "src/lib.rs"

[dependencies]
log = "*"
